# magma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW.cmake  FindGLM.cmake  Findspdlog.cmake  assign_source_group.cmake  increment_cmake_version.cmake
cmake/configured/: MagmaConfig.hpp.in
data/shaders/: compile.bat  compile.sh
src/: CMakeLists.txt  defines.hh  main.cc
src/Core/: Application.cc  Application.hh  Assertions.cc  Assertions.hh  Logger.cc  Logger.hh
test/: test.cpp
tests/: CMakeLists.txt  helloworld.cc
